appId: ai.versatile.craneview.staging

tags:
  - event-columns

onFlowStart:
  - runFlow: ../login/planUserLogin.yaml
  - runFlow: ../utils/switchToAventura.yaml
---
- assertVisible: "Calendar"
- tapOn: "Calendar"
- assertVisible: "Today"
- assertVisible: "Deliveries"
- tapOn: "Deliveries"
# Clicking on '+' button
- tapOn:
    point: "90%,85%"
- assertVisible: "Request resource"
# Clicking on resource activity option
- tapOn: "Request resource"
- assertVisible: "Add title"
- tapOn: "Add title"
- inputText: "Test event"
- tapOn: "Select trade"
- runFlow:
    when:
      notVisible: "Acousti"
    commands:
      - assertVisible: "General"
      - tapOn: "General"
- runFlow:
    when:
      visible: "Acousti"
    commands:
      - assertVisible: "Acousti"
      - tapOn: "Acousti"
- assertVisible: "Select required resources"
- tapOn: "Select required resources"
- assertVisible: "Tower Crane"
- tapOn: "Tower Crane"
- tapOn: "DONE"
- assertVisible: "Add additional information here"
- tapOn: "Add additional information here"
- inputText: "Test event"
- assertVisible: "SEND REQUEST"
- tapOn: "SEND REQUEST"
- tapOn: "Tower Crane"
- runFlow:
    when:
      visible: "First event*."
    commands:
      - tapOn: "First event*."
      - assertVisible: ".*Test event*."
      - tapOn: ".*Test event*."
- runFlow:
    when:
      notVisible: "First event*."
    commands:
      - runFlow:
          when:
            notVisible: ".*Test event*."
          commands:
            - scrollUntilVisible:
                element:
                  text: ".*Test event*."
                direction: UP
            - runFlow:
                when:
                  notVisible: ".*Test event*."
                commands:
                  - scrollUntilVisible:
                      element:
                        text: ".*Test event*."
                      direction: DOWN
      - assertVisible: ".*Test event*."
      - tapOn: ".*Test event*."
# - assertVisible: "*Test event*."
# - tapOn: ".*Test event*."
- assertVisible: "Pending approval"
- back
- assertVisible: "Profile"
- runFlow: ../login/logout.yaml
- runFlow: ../login/internalLogin.yaml
- runFlow: ../utils/switchToAventura.yaml
- assertVisible: "Calendar"
- tapOn: "Calendar"
- assertVisible: "Tower Crane"
- tapOn: "Tower Crane"
- scrollUntilVisible: 
    element: 
      text: ".*Test event*."
- tapOn: ".*Test event*."
- assertVisible: "Approve?"
- assertVisible: ".*APPROVE"
- assertVisible: ".*REJECT"
- tapOn: ".*REJECT"
- assertVisible: "Reject request?"
- assertVisible: "Provide Rejection Reason"
- assertVisible: "Add a note here"
- tapOn: "Add a note here"
- inputText: "Test event"
- assertVisible: "CANCEL"
- assertVisible: "YES, REJECT"
- tapOn: "YES, REJECT"
- assertNotVisible: ".*Test event*."
- runFlow: ../login/logout.yaml
- runFlow: ../login/planUserLogin.yaml
- runFlow: ../utils/switchToAventura.yaml
- assertVisible: "Calendar"
- tapOn: "Calendar"
- assertVisible: "Tower Crane"
- tapOn: "Tower Crane"
- assertVisible: ".*Test event*."
- tapOn: ".*Test event*."
- assertVisible: ".*Rejected by Yakir Lavi"
- assertVisible: ".*Tower Crane*."
- assertVisible: ".*Test event*."