appId: ai.versatile.craneview.staging

tags:
  - event-columns

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
- assertVisible: "Calendar"
- tapOn: "Calendar"
- assertVisible: "Today"
- tapOn:
    point: "90%,79%"
# TO BE DONE
