appId: ai.versatile.craneview.staging

tags:
  - digest-tabs

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
  - runFlow: ../utils/switchToAventura.yaml

---
- assertVisible: "Catch Up"
- tapOn: "Catch Up"
# tap on date picker
- assertVisible: "THURSDAY, November 14, 2024"
- assertVisible: "Daily activity"
- assertVisible: "Weekly summary"
- tapOn: "Weekly summary"
- assertVisible: "No data for this day."
