appId: ai.versatile.craneview.staging
jsEngine: graaljs
tags:
  - quick-navigation

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
  - runFlow: ../utils/switchToAventura.yaml
---
- tapOn: "Catch up"
- extendedWaitUntil:
    visible: "TIME ON HOOK" 
    timeout: 10000
- tapOn:
    point: "91%,27%"
- evalScript: ${console.log('Quick Navigation button was pressed')}
- assertVisible: "Time on Hook"
- assertVisible: "Tower Crane"
- assertVisible: "DAILY ACTIVITY"
- tapOn: "Tower Crane"
- assertVisible: "TIME ON HOOK"
- assertVisible: "Tower Crane"
- assertVisible: "VIEW LIFTS"