appId: ai.versatile.craneview.staging

tags:
  - digest-tabs

onFlowStart:
  - runFlow: login.yaml

---
- tapOn: "Profile"
- assertVisible: "Choose a site"
- tapOn:
    point: 50%, 30%
- assertVisible: "My Jobsites"
- tapOn: "Bellevue 600"
- assertNotVisible: "My Jobsites"
- assertVisible: "Bellevue 600"
- tapOn: "Catch Up"
# tap on date picker
- tapOn:
    point: "40%,27%"
# tap on back arrow
- doubleTapOn:
    point: "9%,54%"
- tapOn: 
    point: "9%,54%"
- tapOn: "6"
- assertVisible: "TC1"
- assertVisible: "TC2"
- assertVisible: "Weekly All Site"