appId: ai.versatile.craneview.staging

tags:
  - deleted-insight

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
- tapOn: "Profile"
- assertVisible: "Choose a site"
- tapOn:
    point: 50%, 30%
- scrollUntilVisible: 
    element: "3083 Walnut"
- tapOn: "3083 Walnut"
- tapOn: "Insights"
- assertVisible: "Saved"
- assertVisible: "Unread"
- assertVisible: "All"
- scrollUntilVisible: 
    element: "29 mins lost"
- assertVisible: "Installation failed"
- tapOn: "Installation failed"
- assertVisible: "Insight deleted"
- assertVisible: "support@versatile.ai"
- assertVisible: "BACK TO ALL INSIGHTS"
- tapOn: "BACK TO ALL INSIGHTS"
- tapOn:
    point: 85%,71%
- assertVisible: "Installation failed"