appId: ai.versatile.craneview.staging

env:
  EX_USER_PLAN_LIVE: "yakir.lavi+emptystate2@versatile.ai"
  PASSWORD: "Xvnwhcdo891"

tags:
  - no-insights
---
- launchApp
- runFlow: ../login/internalLogin.yaml
- tapOn: "Profile"
- tapOn: "Choose a site"
- tapOn:
    point: 50%, 30%
- scrollUntilVisible: 
    element: "Cherry Creek"
- assertNotVisible: "Insights"
