appId: ai.versatile.craneview.staging

tags:
  - advanced
  - empty-unread-insights

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
- tapOn: "Insights"
- assertVisible: "Unread"
- tapOn: "Unread"
- assertVisible: "You made a lot of progress"
- assertVisible: "You checked everything off your list."

