appId: ai.versatile.craneview.staging

env:
  EX_USER: "yakir.lavi+report@versatile.ai"
  PASSWORD: "Xvnwhcdo891"

tags: 
  - insight-page-title
---
- runFlow: ../login/internalLogin.yaml
- assertVisible: "Hello, Yakir"
- assertVisible: "Here’s a Catch up of your site activity"
- tapOn: "Insights"
- assertVisible: "Insights"
