appId: ai.versatile.craneview.staging

tags:
  - last-updated-insight

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
- runFlow:
    file: "../utils/switchToAventura.yaml"
- tapOn: "Insights"
- assertVisible: "Saved"
- assertVisible: "Unread"
- assertVisible: "All"
- scrollUntilVisible: 
    element: "35 mins longer than similar lifts"
- tapOn: "35 mins longer than similar lifts"
- assertVisible: "Last updated by Versatile on January 23, 2025"