appId: ai.versatile.craneview.staging

tags:
  - advanced
  - save-insight

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
- tapOn: "Profile"
- tapOn: "Choose a site"
- tapOn:
    point: "50%, 30%"
- scrollUntilVisible: 
    element: "Aventura" 
- tapOn: "Aventura"
- tapOn: "Insights"
- assertVisible: "Saved"
- assertVisible: "Unread"
- assertVisible: "All"
- tapOn: "All"
# Save the insight star icon
- tapOn: 
    point: "87%,19%"
- tapOn: "Saved"
- assertVisible: "Long installation: Steel Beam"



