appId: ai.versatile.craneview.staging

tags:
  - advanced
  - saved-insights

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
- runFlow:
    file: "../utils/switchToAventura.yaml"
- tapOn: "Insights"
- runFlow: ../insights/saveInsight.yaml
- assertVisible: "Long installation: Steel Beam"
- assertVisible: "24 mins longer than similar lifts"
- tapOn: "24 mins longer than similar lifts"
- assertVisible: "51m"
- assertVisible: "27m"
- scrollUntilVisible: 
    element: "No comments here yet!"
# assertVisible: "No comments here yet"
# back arrow
- tapOn:
    point: "8%,7%"
- assertNotVisible: "43m"
- assertNotVisible: "13m"
- assertVisible: "Long installation: Steel Beam"
- assertVisible: "24 mins longer than similar lifts"
- runFlow:
    file: "../utils/unsaveInsight.yaml"
