appId: ai.versatile.craneview.staging

tags:
  - unread-insight

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
- runFlow:
    file: "../utils/switchToAventura.yaml"
- tapOn: "Insights"
- assertVisible: "Long installation: Steel Beam"
- assertVisible: "26 mins longer than similar lifts"
- assertVisible: "Unread"
- tapOn: "Unread"
- assertVisible: "Long installation: Steel Beam"
- assertVisible: "26 mins longer than similar lifts"