appId: ai.versatile.craneview.staging

tags:
  - live-screen

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
- tapOn: "Profile"
- assertVisible: "Choose a site"
- runFlow: 
    when: 
      notVisible: "Aventura"
    commands:
      - tapOn: 
          point: 50%, 30%
      - scrollUntilVisible: 
          element:
           text: "Aventura"
      - tapOn: "Aventura"
- assertVisible: "Live"
- tapOn: "Live"
- assertVisible: "RT"
- tapOn: "RT"
- assertVisible: "RT"
- assertVisible: "TODAY"
- assertVisible: "Live"
- assertVisible: "Battery 1"
- assertVisible: "Battery 2"

