appId: ai.versatile.craneview.staging

tags:
  - no-live-stream

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
- tapOn: "Profile"
- assertVisible: "Choose a site"
- runFlow: 
    when: 
      notVisible: "Versatile Demo"
    commands:
      - tapOn: 
          point: 50%, 30%
      - scrollUntilVisible: 
          element:
            text: "Versatile Demo"
      - tapOn: "Versatile Demo"
- assertVisible: "Live"
- tapOn: "Live"
- assertVisible: "This is where you’ll see the live stream from your Versatile devices"
- assertVisible: "This site has not gone live yet. If that’s not the case, contact us at support@versatile.ai"