appId: ai.versatile.craneview.staging

env:
  EXTERNAL_USER: "yakir.lavi+ext_auto@versatile.ai"
  PASSWORD: "Test123!"

tags: 
  - external-user-login
---
- launchApp
- runFlow: 
    file: "../login/logout.yaml"
    when:
      visible: "Profile"
- runFlow:
    when:
      visible: "LOG IN"
    commands:
      - tapOn: "LOG IN"
      - tapOn: "Username or email address"
      - inputText: 
          label: Input the user's mail.
          text: ${EXTERNAL_USER}
      - runFlow:
          when:
            platform: "ios"
          commands:
            - tapOn: "Return"
      - runFlow:
          when:
            platform: "android"
          commands:
            - "hideKeyboard"
      - tapOn: "Continue"
      - runFlow:
          when:
            platform: "ios"
          commands:
            - tapOn: "Password"
      - runFlow:
          when:
            platform: "android"
          commands:
            - waitForAnimationToEnd
            - tapOn: "Password"
            - waitForAnimationToEnd
      - inputText: 
          label: Input the user's password.
          text: ${PASSWORD}
      - runFlow:
          when:
            platform: "ios"
          commands:
            - tapOn:
                point: "50%,10%"
      - runFlow:
          when:
            platform: "android"
          commands:
            - "hideKeyboard"
      - tapOn: "Continue"
      - assertVisible: "Profile"
