appId: ai.versatile.craneview.staging

env:
    INTERNAL_USER: yakir.lavi+int_auto@versatile.ai
    PASSWORD: "Test123!"
tags: 
    - login
---
- launchApp:
    clearState: true

- runFlow:
    when:
      visible: "Profile"
    file: "../login/logout.yaml"

- runFlow:
    when:
      visible: "LOG IN"
    commands:
      - tapOn: "LOG IN"
      - runFlow:
          when:
            visible: "Username or email address"
          commands:
            - tapOn: "Username or email address"
            - inputText: ${INTERNAL_USER}
            - runFlow:
                when:
                  platform: IOS
                commands:
                  - tapOn: "Return"
            - runFlow:
                when:
                  platform: ANDROID
                commands:
                  - pressKey: enter
            - tapOn: "Continue"
            - runFlow:
                when:
                  platform: IOS
                commands:
                  - tapOn: "Password"
            - runFlow:
                when:
                  platform: ANDROID
                commands:
                 - inputText: ${PASSWORD}
            - runFlow:
                when:
                  platform: IOS
                commands:
                  - tapOn: "Return"
            - runFlow:
                when:
                  platform: ANDROID
                commands:
                  - tapOn: "Continue"
- assertVisible: "Profile"

