appId: ai.versatile.craneview.staging

env:
    INTERNAL_USER: yakir.lavi+internal@versatile.ai
    PASSWORD: "Xvnwhcdo891"
tags: 
    - login
---
- launchApp
- runFlow:
    when:
      visible: "LOG IN"
    commands:
      - tapOn: "LOG IN"
      - tapOn:
            id: "username"
      - inputText: ${INTERNAL_USER}
      - tapOn: "Continue"
      - tapOn:
            id: "password"
      - inputText: ${PASSWORD}
      - "hideKeyboard"
      - tapOn:
            point: "49%,59%"
      - assertVisible: "Profile"
