appId: ai.versatile.craneview.staging

env:
    INTERNAL_USER: yakir.lavi+int_auto@versatile.ai
    PASSWORD: "Test123!"
tags: 
    - login
---
- tapOn: "LOG IN"
- tapOn: "Username or email address"
- inputText: 
    label: Input the user's mail.
    text: ${INTERNAL_USER}
- runFlow:
    when:
      platform: "ios"
    commands:
      - tapOn: "Return"
- runFlow:
    when:
      platform: "android"
    commands:
      - "hideKeyboard"
- tapOn: "Continue"
- runFlow:
    when:
      platform: "ios"
    commands:
      - tapOn: "Password"
- runFlow:
    when:
      platform: "android"
    commands:
      - waitForAnimationToEnd
      - assertVisible: "Password"
      - tapOn: "Password"
      - waitForAnimationToEnd
- inputText: 
    label: Input the user's password.
    text: ${PASSWORD}
- runFlow:
    when:
      platform: "ios"
    commands:
      - tapOn:
          point: "50%,10%"
- runFlow:
    when:
      platform: "android"
    commands:
      - "hideKeyboard"
- tapOn: "Continue"
- assertVisible: "Profile" 