appId: ai.versatile.craneview.staging
tags:
  - advanced
  - logout-test-run
---
- runFlow:
    when:
      notVisible: "Profile"      
    commands:
      - launchApp
- runFlow:
    when:
      visible: "LOG IN"
    commands:
      - runFlow: loginSteps.yaml
- tapOn: "Profile"
- scrollUntilVisible:
    element: "Log out"
- assertVisible: "Log out"
- tapOn: "Log out"
- assertVisible: "Log out of your account?"
- assertVisible: "LOG OUT"
- tapOn: "LOG OUT"
- assertVisible: "LOG IN"