appId: ai.versatile.craneview.staging

tags:
  - change-job-title

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
- tapOn: "Profile"
- assertVisible: "Account settings"
# Click on job title on profile screen
- tapOn:
    point: "50%,42%"
- runFlow:
    when:
      visible: "Field Engineer"
    commands:
      - tapOn: "Job title"
      - assertVisible: "Crane Operator"
      - tapOn: "Crane Operator"
      - assertVisible: "Crane Operator"
- runFlow:
    when:
      visible: "Crane Operator"
    commands:
      - tapOn: "Job title"
      - assertVisible: "Field Engineer"
      - tapOn: "Field Engineer"
      - assertVisible: "Field Engineer"
- runFlow:
    when:
      visible: "Subcontractor"
    commands:
      - tapOn: "Employer type"
      - assertVisible: "General contractor"
      - tapOn: "General contractor"
      - assertVisible: "General contractor"
- runFlow:
    when: 
      visible: "General contractor"
    commands:
      - tapOn: "Employer type"
      - assertVisible: "Subcontractor"
      - tapOn: "Subcontractor"
      - assertVisible: "Subcontractor"
- tapOn: "SAVE"
