appId: ai.versatile.craneview.staging

tags:
  - enable-disbale-notifications

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
- assertVisible: "Profile"
- tapOn: "Profile"
- assertVisible: "Notifications"
- tapOn: "Notifications"
- assertVisible: "GO TO SETTINGS"
- tapOn: "GO TO SETTINGS"
- assertVisible: "All Versatile-S notifications"
- tapOn: "All Versatile-S notifications"
- assertVisible: "You haven't allowed notifications from this app"
- back
- assertVisible: "Profile"
- tapOn: "Profile"
- assertVisible: "Notifications"
- tapOn: "Notifications"
- assertVisible: "GO TO SETTINGS"
- tapOn: "GO TO SETTINGS"
- assertVisible: "All Versatile-S notifications"
- tapOn: "All Versatile-S notifications"
- assertNotVisible: "You haven't allowed notifications from this app"
- back
- assertVisible: "Profile"