appId: ai.versatile.craneview.staging

tags:
  - license-link

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
# 2 links
- tapOn: "Profile"
- scrollUntilVisible:
    element: 
      text: "Licenses"
- tapOn:
    point: "56%,81%"
- assertVisible: ".*Control Your Jobsite with Actionable Insights*."
- back
- assertVisible: "Account settings"
- assertVisible: ".*Licenses*."
- tapOn: ".*Licenses*."
- assertVisible: "Accompanist Pager layouts"
- back
- assertVisible: "Account settings"