appId: ai.versatile.craneview.staging

tags:
  - change-job-title

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
- tapOn: "Profile"
- assertVisible: "Privacy Policy"
- tapOn: "Privacy Policy"
- runFlow:
    when:
      visible: "Accept All"
    commands:
      - tapOn: "Accept All"
- assertVisible: ".*INTRODUCTION"
- back
- assertVisible: "Choose a site"