appId: ai.versatile.craneview.staging

tags:
  - site-switch-test-run

onFlowStart:
  - runFlow: ../login/internalLogin.yaml
---
- tapOn: "Profile"
- assertVisible: "Choose a site"
- tapOn:
    point: 50%, 30%
- assertVisible: "My Jobsites"
- tapOn: "CCNI"
- assertNotVisible: "My Jobsites"
- assertVisible: "CCNI"
