appId: ai.versatile.craneview.staging

tags:
  - unread-insight

onFlowStart:
  - runFlow: login.yaml
---
- assertVisible: "3083 Walnut"
- assertVisible: "Insights"
- tapOn: "Insights"
- assertVisible: "Unread"
- tapOn: "Unread"
- assertVisible: "You made a lot of progress"
- assertVisible: "You checked everything off your list."